# 02-dev-patraldo-poetry-django

./: .env  Dockerfile  db.sqlite3  fly.toml  package-lock.json  pyproject.toml  startup.sh
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: App.svelte  Xapp.svelte  main.js
myapp/: settings.py  urls.py
myapp/api/: views.py
myapp/static/frontend/: bundle.css  bundle.js  bundle.js.map
myapp/staticfiles/frontend/: bundle.js  bundle.js.map
