[tool.poetry]
name = "poetry-django"
version = "0.1.0"
description = ""
authors = ["Chef <cheftech@patraldo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
whitenoise = "^6.7.0"
django = "^5.1.2"
djangorestframework = "^3.15.2"
gunicorn = "^23.0.0"
dj-database-url = "^2.2.0"
django-environ = "^0.11.2"
environs = "^11.0.0"
django-urls = "^1.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
